// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuPage renders correctly 1`] = `
<main>
  <header />
  <section
    className="section"
  >
    <div
      className="menu container"
    >
      <div
        className="row"
      >
        <div
          className="col-12"
          data-cy="menuContent"
        >
          <div
            dangerouslySetInnerHTML={
              {
                "__html": <p>
                  HTML
                </p>,
              }
            }
          />
          <hr />
        </div>
        <div
          className="menu__image col-lg-6 col-md-12"
          data-cy="menuImage"
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
        <div
          className="menu__image col-lg-6 col-md-12"
          data-cy="menuImage"
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</main>
`;

exports[`MenuPageTemplate renders GatsbyImage 1`] = `
[
  <header />,
  <section
    className="section"
  >
    <div
      className="menu container"
    >
      <div
        className="row"
      >
        <div
          className="col-12"
          data-cy="menuContent"
        >
          <div>
            content
          </div>
          <hr />
        </div>
        <div
          className="menu__image col-lg-6 col-md-12"
          data-cy="menuImage"
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`MenuPageTemplate renders content correctly 1`] = `
[
  <header />,
  <section
    className="section"
  >
    <div
      className="menu container"
    >
      <div
        className="row"
      >
        <div
          className="col-12"
          data-cy="menuContent"
        >
          <div>
            content
          </div>
          <hr />
        </div>
        <div
          className="menu__image col-lg-6 col-md-12"
          data-cy="menuImage"
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`MenuPageTemplate renders html content correctly 1`] = `
[
  <header />,
  <section
    className="section"
  >
    <div
      className="menu container"
    >
      <div
        className="row"
      >
        <div
          className="col-12"
          data-cy="menuContent"
        >
          <div
            dangerouslySetInnerHTML={
              {
                "__html": <p>
                  HTML content
                </p>,
              }
            }
          />
          <hr />
        </div>
        <div
          className="menu__image col-lg-6 col-md-12"
          data-cy="menuImage"
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;
